[gd_scene load_steps=16 format=2]

[ext_resource path="res://title_screen/buttons/Dammode/Easy.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/fade_in/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/buttons/Dammode/Hard.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/Dammode/normal.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/car1.png" type="Texture2D" id=5]
[ext_resource path="res://title_screen/000EX.png" type="Texture2D" id=6]
[ext_resource path="res://title_screen/car2.png" type="Texture2D" id=7]
[ext_resource path="res://title_screen/fonts/ARCADECLASSIC.TTF" type="FontFile" id=8]
[ext_resource path="res://title_screen/Menu.gd" type="Script" id=9]
[ext_resource path="res://title_screen/blue.png" type="Texture2D" id=10]
[ext_resource path="res://title_screen/moto.png" type="Texture2D" id=11]
[ext_resource path="res://title_screen/yellow.png" type="Texture2D" id=12]
[ext_resource path="res://title_screen/red.png" type="Texture2D" id=13]
[ext_resource path="res://title_screen/back.tscn" type="PackedScene" id=14]

[sub_resource type="FontFile" id=1]
size = 157
font_data = ExtResource( 8 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.1748
offset_top = 1.5874
offset_right = 3.1748
offset_bottom = 1.5874
scale = Vector2( 0.995043, 1.09016 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="000EX2" type="Sprite2D" parent="."]
position = Vector2( 641.579, 375.162 )
texture = ExtResource( 6 )

[node name="blue" type="Sprite2D" parent="000EX2"]
position = Vector2( 132.358, -83.6077 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="red" type="Sprite2D" parent="000EX2/blue"]
position = Vector2( 418.157, 713.519 )
texture = ExtResource( 13 )

[node name="yellow" type="Sprite2D" parent="000EX2/blue"]
position = Vector2( -659.984, 281.263 )
texture = ExtResource( 12 )

[node name="moto" type="Sprite2D" parent="."]
position = Vector2( 240.402, 366.514 )
rotation = -0.263613
scale = Vector2( 0.119372, 0.119372 )
texture = ExtResource( 11 )

[node name="car2" type="Sprite2D" parent="."]
position = Vector2( 728.079, 420.411 )
rotation = 0.214736
scale = Vector2( 0.197894, 0.206594 )
texture = ExtResource( 7 )

[node name="car1" type="Sprite2D" parent="."]
position = Vector2( 120.456, 458.846 )
rotation = -0.676766
scale = Vector2( 0.201055, 0.20352 )
texture = ExtResource( 5 )

[node name="Menu" type="VBoxContainer" parent="."]
offset_left = 146.684
offset_top = 99.6422
offset_right = 1186.68
offset_bottom = 659.642
scale = Vector2( 0.991049, 1.03082 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
offset_right = 1039.0
offset_bottom = 559.0
size_flags_vertical = 3
alignment = 2

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
offset_right = 1039.0
offset_bottom = 559.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
visible = false
offset_left = 522.0
offset_right = 1040.0
offset_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
offset_left = 0.96511
offset_top = -1.68856
offset_right = 6.96509
offset_bottom = 2.31146
clip_contents = true

[node name="Label" type="Label" parent="."]
offset_left = 64.8439
offset_top = 45.8653
offset_right = 1242.84
offset_bottom = 205.865
scale = Vector2( 0.75, 0.75 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = SubResource( 1 )
text = "Escape war zone "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" parent="." instance=ExtResource( 1 )]
offset_left = 404.0
offset_top = 175.0
offset_right = 579.0
offset_bottom = 235.0

[node name="Normal" parent="." instance=ExtResource( 4 )]
offset_left = 374.0
offset_top = 293.0
offset_right = 632.0
offset_bottom = 353.0

[node name="Hard" parent="." instance=ExtResource( 3 )]
offset_left = 406.0
offset_top = 428.0
offset_right = 585.0
offset_bottom = 488.0

[node name="back" parent="." instance=ExtResource( 14 )]
offset_left = 925.208
offset_top = 497.363
offset_right = 1102.21
offset_bottom = 576.363
scale = Vector2( 0.5, 0.5 )

[connection signal="tree_entered" from="Menu/CenterRow/Buttons" to="." method="_on_Buttons_tree_entered"]
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
